overflow fix

--- a/src/css/frontpage.css
+++ b/src/css/frontpage.css
@@ -1,4 +1,4 @@
-#frontpage #tabContainer, #frontpage #contentContainer
+#frontpage #tabContainer
 {
 	width: 360px;
 }
@@ -53,7 +53,12 @@
 	clear: left;
 	margin-bottom: 15px;
 	
+	width: 380px;
+	
+	/* TODO: overflow: hidden hides text box shadows */
 	overflow: hidden;
+	background-color: rgba(255,0,0,0.2);
+	
 	position: relative;
 }
 
@@ -62,6 +67,8 @@
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	
+	padding: 10px;
 }
 
 #frontpage #contentContainer div form div input
